2007-09-22  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/jni/jni-string.c (KaffeJNI_ReleaseStringUTFChars): 
	Introduced local variable to fix compiler warning on x86_64-linux.

2007-09-22  Dalibor Topic  <robilad@kaffe.org>

	Fixed compiler warning on x86_64-linux.

	* kaffe/kaffevm/classMethod.c (methodIsNative): New function.

	* kaffe/kaffevm/classMethod.h (METHOD_IS_NATIVE): Removed macro.
	(methodIsNative) Added prototype.

	* kaffe/kaffevm/classPool.c,
	kaffe/kaffevm/stackTrace.c,
	kaffe/kaffevm/intrp/machine.c,
	kaffe/kaffevm/intrp/methodcalls.c,
	kaffe/kaffevm/jit/machine.c,
	kaffe/kaffevm/jit/methodcalls.c,
	kaffe/kaffevm/jit3/machine.c,
	kaffe/kaffevm/jni/jni.c,
	kaffe/kaffevm/verifier/verify.c,
	kaffe/kaffevm/verifier/verify2.c,
	kaffe/xprof/feedback.c: Use methodIsNative instead of METHOD_IS_NATIVE.

2007-09-22  Dalibor Topic  <robilad@kaffe.org>

	* kaffevm/classPool.c,
        kaffevm/intrp/machine.c,
        kaffevm/intrp/methodcalls.c,
        kaffevm/jit/machine.c,
        kaffevm/jit/methodcalls.c,
        kaffevm/jit3/machine.c,
        kaffevm/jni/jni.c,
        kaffevm/stackTrace.c,
        xprof/feedback.c: Use METHOD_IS_NATIVE rather than testing for ACC_NATIVE manually.

2007-09-19  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/external/classpath/native/jni/native-lib/Makefile.am
	(AM_LDFLAGS) Use CLASSPATH_CONVENIENCE flags, as it is a convenience library.

2007-09-19  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/external/classpath/native/fdlibm/dtoa.c: Include
	stdlib.h to have a declaration for free.

2007-09-18  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c (gcGetObjectIndex): 
	Changed return type to gc_alloc_type_t to match prototype.

2007-09-18  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am: Removed unused export.

2007-09-13  Dalibor Topic  <robilad@kaffe.org>

	* WHATSNEW: Add an entry for news after 1.1.8.
